v4.5.10: Fix game frame shift on PC browser

--- a/src/game.css
+++ b/src/game.css
@@ -7,7 +7,9 @@ body, html {
 }
 
 #game-container {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
